--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,3 +23,12 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
+    - run: npm run coverage
+    - name: Upload Coverage Report
+      uses: codecov/codecov-action@v1
+      with: 
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./ccoverage.lcov
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_err: true
